feature: add translation, add mode switch

--- a/src/assets/base.pcss
+++ b/src/assets/base.pcss
@@ -10,6 +10,12 @@
 
   --vt-c-indigo: #2c3e50;
 
+  --vt-c-light-grey: #F4F6FE;
+
+  --vt-c-green-gradient: linear-gradient(to right, #21D19F, #49DF85);
+
+  --vt-default-radius: 10px;
+
   --vt-c-divider-light-1: rgba(60, 60, 60, 0.29);
   --vt-c-divider-light-2: rgba(60, 60, 60, 0.12);
   --vt-c-divider-dark-1: rgba(84, 84, 84, 0.65);
@@ -23,7 +29,7 @@
 
 /* semantic color variables for this project */
 :root {
-  --color-background: var(--vt-c-white);
+  --color-background: var(--vt-c-light-grey);
   --color-background-soft: var(--vt-c-white-soft);
   --color-background-mute: var(--vt-c-white-mute);
 
