feature: switch receipts and expenses in mode-switch

--- a/src/assets/base.pcss
+++ b/src/assets/base.pcss
@@ -11,10 +11,18 @@
   --vt-c-indigo: #2c3e50;
 
   --vt-c-light-grey: #F4F6FE;
+  --vt-c-light-green: #D4F2E9;
+  
+  --vt-c-font-grey: #7293A0;
+  --vt-c-font-green: #23D19D;
 
   --vt-c-green-gradient: linear-gradient(to right, #21D19F, #49DF85);
+  --vt-c-red-gradient: linear-gradient(to right, #D1495B, #EDAE49);
 
   --vt-default-radius: 10px;
+
+  --vt-default-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
+  --vt-default-button-shadow: 0px -3px 5px rgba(0, 0, 0, 0.05);
 
   --vt-c-divider-light-1: rgba(60, 60, 60, 0.29);
   --vt-c-divider-light-2: rgba(60, 60, 60, 0.12);
