--- a/src/widgets/main-navbar/main-navbar.pcss
+++ b/src/widgets/main-navbar/main-navbar.pcss
@@ -7,4 +7,13 @@
     .user {
         display: flex;
     }
+
+    .navbar__item__last-operation {
+        height: 35px;
+        width: 35px;
+        padding: 7px;
+        border-radius: 100px;
+        border: none;
+        background: var(--vt-c-light-green);
+    }
 }
