feature: add objects-list

--- a/src/assets/main.pcss
+++ b/src/assets/main.pcss
@@ -1,7 +1,9 @@
 @import './base.pcss';
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
 
 #app {
-  
+  font-family: 'Roboto', sans-serif;
+  font-size: 14px;
 }
 
 @media (min-width: 1024px) {
@@ -21,8 +23,4 @@ a,
   a:hover {
     background-color: hsla(160, 100%, 37%, 0.2);
   }
-}
-
-.container {
-  padding: 0 30px;
 }
