--- a/src/assets/base.pcss
+++ b/src/assets/base.pcss
@@ -13,6 +13,7 @@
   --vt-c-light-grey: #F4F6FE;
   --vt-c-light-green: #D4F2E9;
   
+  --vt-c-font-black: #393F3D;
   --vt-c-font-grey: #7293A0;
   --vt-c-font-green: #23D19D;
 
