fix: add formatted amount

--- a/src/features/tradition-card/tradition-card.pcss
+++ b/src/features/tradition-card/tradition-card.pcss
@@ -26,6 +26,8 @@
 
         .transaction-info__subtitle {
             text-align: end;
+            color: var(--vt-c-font-green);
+            font-weight: 500;
         }
     }
 }
