feature: add dynamic date

--- a/src/features/mode-switch/mode-switch.pcss
+++ b/src/features/mode-switch/mode-switch.pcss
@@ -55,4 +55,8 @@
             background: var( --vt-c-red-gradient);
         }
     }
+
+    .mode-switch__container_no-left-radius {
+        border-radius: 0 10px 10px 10px;
+    }   
 }
