--- a/src/assets/main.pcss
+++ b/src/assets/main.pcss
@@ -10,7 +10,6 @@
 
 }
 
-
 a,
 .green {
   text-decoration: none;
@@ -23,4 +22,11 @@ a,
   a:hover {
     background-color: hsla(160, 100%, 37%, 0.2);
   }
+}
+
+.main-button {
+  position: fixed;
+  bottom: 20px;
+  left: 30px;
+  width: calc(100% - 60px);
 }
