feature: add links

--- a/src/features/tradition-button/tradition-button.pcss
+++ b/src/features/tradition-button/tradition-button.pcss
@@ -5,4 +5,8 @@
     color: var(--vt-c-white);
     border-radius: var(--vt-default-radius);
     background: var(--vt-c-green-gradient);
+
+    &:active {
+        background: var(--vt-c-dark-green-gradient);
+    }
 }
