--- a/src/features/tradition-card/tradition-card.pcss
+++ b/src/features/tradition-card/tradition-card.pcss
@@ -6,6 +6,11 @@
     box-shadow: var(--vt-default-shadow);
     border-radius: var(--vt-default-radius);
 
+    &:active {
+        outline: none; 
+        background-color: transparent;
+    }
+
     .text-content {
         width: 80%;
 
