--- a/src/assets/base.pcss
+++ b/src/assets/base.pcss
@@ -18,6 +18,7 @@
   --vt-c-font-green: #23D19D;
 
   --vt-c-green-gradient: linear-gradient(to right, #21D19F, #49DF85);
+  --vt-c-dark-green-gradient: linear-gradient(to right, #18A77E, #1DBB5C);
   --vt-c-red-gradient: linear-gradient(to right, #D1495B, #EDAE49);
 
   --vt-default-radius: 10px;
