--- a/src/features/tradition-card/tradition-card.pcss
+++ b/src/features/tradition-card/tradition-card.pcss
@@ -31,8 +31,15 @@
 
         .transaction-info__subtitle {
             text-align: end;
-            color: var(--vt-c-font-green);
             font-weight: 500;
+        }
+
+        .receipts {
+            color: var(--vt-c-font-green);
+        }
+
+        .expenses {
+            color: var(--vt-c-font-red);
         }
     }
 }
