--- a/src/assets/base.pcss
+++ b/src/assets/base.pcss
@@ -16,6 +16,7 @@
   --vt-c-font-black: #393F3D;
   --vt-c-font-grey: #7293A0;
   --vt-c-font-green: #23D19D;
+  --vt-c-font-red: #D1495B;
 
   --vt-c-green-gradient: linear-gradient(to right, #21D19F, #49DF85);
   --vt-c-dark-green-gradient: linear-gradient(to right, #18A77E, #1DBB5C);
