feature: add store

--- a/src/assets/main.pcss
+++ b/src/assets/main.pcss
@@ -24,6 +24,13 @@ a,
   }
 }
 
+h1 {
+  margin-bottom: 20px;
+  color: var(--vt-c-font-green);
+  font-weight: 700;
+  font-size: 20px;
+}
+
 .main-button {
   position: fixed;
   bottom: 20px;
