feature: add icons

--- a/src/assets/main.pcss
+++ b/src/assets/main.pcss
@@ -25,10 +25,17 @@ a,
 }
 
 h1 {
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   color: var(--vt-c-font-green);
   font-weight: 700;
   font-size: 20px;
+}
+
+h3 {
+  margin-bottom: 10px;
+  color: var(--vt-c-font-grey);
+  font-weight: 700;
+  font-size: 14px;
 }
 
 .main-button {
