--- a/src/widgets/main-navbar/main-navbar.pcss
+++ b/src/widgets/main-navbar/main-navbar.pcss
@@ -6,14 +6,31 @@
 
     .user {
         display: flex;
+        
+        img {
+            width: 40px;
+            height: 40px;
+        }
+
+        .user__name {
+            margin-left: 10px;
+            padding-top: 10px;
+            color: var(--vt-c-font-green);
+        }
     }
 
     .navbar__item__last-operation {
+        padding: 5px 6px;
+        margin-top: 5px;
         height: 35px;
         width: 35px;
-        padding: 7px;
         border-radius: 100px;
         border: none;
         background: var(--vt-c-light-green);
+
+        img {
+            width: 25px;
+            height: 25px;
+        }
     }
 }
