--- a/src/features/tradition-card/tradition-card.pcss
+++ b/src/features/tradition-card/tradition-card.pcss
@@ -12,9 +12,10 @@
     }
 
     .text-content {
-        width: 80%;
+        width: 60%;
 
         .text-content__title {
+            color: var(--vt-c-font-black);
             font-weight: 500;
         }
 
@@ -23,8 +24,18 @@
         }
     }
 
+    .tradition-card__arrow {
+        margin-left: auto;
+        margin-right: 5px;
+        padding-top: 10px;  
+
+        img {
+            width: 20px;
+            heigth: 20px;
+        }
+    }
+
     .transaction-info {
-        width: 20%;
         display: flex;
         flex-direction: column; 
         justify-content: center;
