feature: add object page

--- a/src/features/tradition-button/tradition-button.pcss
+++ b/src/features/tradition-button/tradition-button.pcss
@@ -17,10 +17,11 @@
 
     .button__main {
         padding: 18px;
+        display: flex;
+        justify-content: center;
         width: 80%;
         height: 55px;
         border: none;
-        font-weight: 500;
         color: var(--vt-c-white);
         border-radius: var(--vt-default-radius);
         background: var(--vt-c-green-gradient);
