--- a/src/widgets/main-navbar/main-navbar.pcss
+++ b/src/widgets/main-navbar/main-navbar.pcss
@@ -20,7 +20,8 @@
     }
 
     .navbar__item__last-operation {
-        padding: 5px 6px;
+        display: block;
+        padding: 5px;
         margin-top: 5px;
         height: 35px;
         width: 35px;
