feat: add project-create

--- a/src/assets/base.pcss
+++ b/src/assets/base.pcss
@@ -17,11 +17,11 @@
   
   --vt-c-font-black: #393F3D;
   --vt-c-font-grey: #7293A0;
-  --vt-c-font-green: #23D19D;
+  --vt-c-font-green: #13b083;
   --vt-c-font-red: #D1495B;
 
-  --vt-c-green-gradient: linear-gradient(to right, #21D19F, #49DF85);
-  --vt-c-dark-green-gradient: linear-gradient(to right, #18A77E, #1DBB5C);
+  --vt-c-green-gradient: linear-gradient(to right, #13b083, #49DF85);
+  --vt-c-dark-green-gradient: linear-gradient(to right, #13b083, #1DBB5C);
   --vt-c-red-gradient: linear-gradient(to right, #D1495B, #EDAE49);
 
   --vt-default-radius: 10px;
