feat: add create object and create transaction

--- a/src/features/tradition-input/tradition-input.pcss
+++ b/src/features/tradition-input/tradition-input.pcss
@@ -1,5 +1,6 @@
 .tradition-input {
   width: 100%; 
+  margin-bottom: 20px;
 
   .tradition-input__title {
     padding: 2px 0;
@@ -20,10 +21,23 @@
   }
 }
 
+textarea {
+  height: 100px;
+  font-family: 'Roboto', sans-serif;
+}
+
 input::-webkit-input-placeholder {
   color: #ccc;
 } 
 
 input::-moz-placeholder {
+  color: #ccc;
+}
+
+textarea::-webkit-input-placeholder {
+  color: #ccc;
+} 
+
+textarea::-moz-placeholder {
   color: #ccc;
 }
