feat: add api for project-page

--- a/src/assets/base.pcss
+++ b/src/assets/base.pcss
@@ -17,6 +17,7 @@
   
   --vt-c-font-black: #393F3D;
   --vt-c-font-grey: #7293A0;
+  --vt-c-font-grey-light: #909ea3;
   --vt-c-font-green: #13b083;
   --vt-c-font-red: #D1495B;
 
