--- a/src/features/tradition-card/tradition-card.pcss
+++ b/src/features/tradition-card/tradition-card.pcss
@@ -12,45 +12,66 @@
     }
 
     .text-content {
-        width: 60%;
+      width: 60%;
+      display: flex;
+      flex-direction: column;
 
-        .text-content__title {
-            color: var(--vt-c-font-black);
-            font-weight: 500;
-        }
+      .text-content__title {
+        color: var(--vt-c-font-black);
+        font-weight: 500;
+        max-width: 150px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
 
-        .text-content__subtitle {
-            color: var(--vt-c-font-grey);
-        }
+      .text-content__title--only {
+        height: 100%;
+        display: flex;
+        align-items: center;
+      }
+
+      .text-content__subtitle {
+        color: var(--vt-c-font-grey);
+        max-width: 150px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
     }
 
-    .tradition-card__arrow {
-        margin-left: auto;
+    .tradition-card__end-content {
+      margin-left: auto;
+      display: flex;
+      align-items: center;
+
+      .tradition-card__arrow {
         margin-right: 5px;
         padding-top: 10px;  
+        margin-bottom: 4px;
 
         img {
-            width: 20px;
-            height: 20px;
+          width: 20px;
+          height: 20px;
         }
-    }
+      }
 
-    .transaction-info {
+      .transaction-info {
         display: flex;
         flex-direction: column; 
         justify-content: center;
+        margin-top: 4px;
 
         .transaction-info__subtitle {
-            text-align: end;
-            font-weight: 500;
+          text-align: end;
+          font-weight: 500;
         }
 
         .receipts {
-            color: var(--vt-c-font-green);
+          color: var(--vt-c-font-green);
         }
 
         .expenses {
-            color: var(--vt-c-font-red);
+          color: var(--vt-c-font-red);
         }
+      }
     }
 }
